# fireJson

./: .gitignore  README.md
Cmakefile/: CMakeLists.txt
Cmakefile/Cmake/: add_module.cmake
Cmakefile/test/: 1.json  2.json
modules/fireJSON/: AppFrame.cpp  AppFrame.fbp  AppFrame.h  AppGUI.cpp  AppGUI.h  fireJSON.cmake
modules/jsonParser/: README.md  arduinoData.json  example.json  export.h  jsonParser.cmake  myJson.cpp  myJson.h
modules/jsonSender/: AppFrame.cpp  AppFrame.fbp  AppFrame.h  AppGUI.cpp  AppGUI.h  jsonSender.cmake
modules/webSocket/: asyncWebSocketServer.cpp  asyncWebSocketServer.h  export.h  syncWebSocketServer.cpp  syncWebSocketServer.h  webSocket.cmake  webSocketClient.cpp  webSocketClient.h  webSocketLib(cmake release).txt  webSocketManager.cpp  webSocketManager.h
versions/v00/Release/: testJSON.json
versions/v01/jsonFireTest/: firstFile.json  secondFile.json  thirdFile.json
versions/v01/test/: 1.json
versions/v02/JsonTest/: secondFile.json  thirdFile.json
versions/v03/JsonTest/: firstFile.json
versions/v03/images/: clear.xpm
